...
    <string name="login_email_label">Email</string>
    <string name="login_email_placeholder">rodiz@tinpet.com</string>
    <string name="login_password_label">Password</string>
    <string name="login_password_placeholder">enter your password</string>
    <string name="login_password_show">Show password</string>
    <string name="login_password_hide">Hide password</string>
    <string name="login_submit">Sign in</string>
    <string name="login_email_form_show">Login with email</string>
    <string name="login_forgot">Forgot password?</string>
    <string name="login_biometric">Sign in with biometric</string>
    <string name="login_or_divider">or continue with</string>
    <string name="login_continue_google">Continue with Google</string>
    <string name="login_google_icon_description">Google</string>
    <string name="login_biometric_title">Confirm it\'s you</string>
...
